<resources>
    <string name="app_name">Tá na Mão</string>
    <string name="facebook_app_id"  translatable="false">2125953461055019</string>
    <string name="fb_login_protocol_scheme">fb2125953461055019</string>
    <string name="bad_credentials">Nome de usuário ou senha erradas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment_one">Hello blank fragment ONE</string>
    <string name="hello_blank_fragment_two">Hello blank fragment TWO</string>
    <string name="failure_connection">Problema de conexão. Por favor, confirma que está conectado a internet e tente mais tarde.</string>
    <string name="loading">Por favor espere...</string>
    <string name="email_error">E-mail não valido</string>
    <string name="password_short_error">A senha deve ter minimo 6 digitos</string>
    <string name="passwords_doesnt_match">As senhas não coincidem</string>
    <string name="register_user_details_title" >Dados do usuário</string>
    <string name="user_name">Nome completo</string>
    <string name="cpf">CPF</string>
    <string name="address">Endereço</string>
    <string name="cep">CEP</string>
    <string name="birthday">Data de nascimento</string>
    <string name="landline">Telefone fixo</string>
    <string name="mobile">Celular</string>
    <string name="email">E-mail</string>
    <string name="button_submit">Enviar</string>
    <string name="name_error">O nome deve ter mais de 5 letras</string>
    <string name="cpf_error">Cpf errado. Por favor tenha certeza que ele tem 11 numeros e sem pontos nem tracos</string>
    <string name="address_error">Endereço minimo deve pois 4 letras</string>
    <string name="cep_error">Cep errado. Por favor verifique que ele está composto por 7 numero sem espacos nem traços</string>
    <string name="birthday_error">Data de nascimento errada. Por favor verifique que tem 8 numeros sem espaços nem simbolos</string>
    <string name="mobile_error">Numero de telefone errado.</string>
    <string name="socialname">Nome é social?</string>
    <string name="name">Nome Completo</string>
    <string name="education">Escolaridade</string>
    <string name="colorskin">Cor da pele</string>
    <string name="genre">Género</string>
    <string name="familyincome">Renda do núcleo familiar (considere salário mínimo de R$954)</string>
    <string name="familynumber">Quantas pessoas no seu núcleo familiar (incluindo você)?</string>
    <string name="activated">Seu negocio encontra-se:</string>
    <string name="actived_actived">Ativo</string>
    <string name="actived_notactived">Inativo (ainda não começou de fato)</string>
    <string name="formalized">Seu negócio é:</string>
    <string name="formalized_formalized">Formalizado (com CNPJ, MEI etc.)</string>
    <string name="formalized_notformalized">Informal</string>
    <string name="maincategory">Área principal do negócio</string>
    <string name="subcategory">Subcategoria</string>
    <string name="no">Não</string>
    <string name="yes">Sim</string>
    <string name="state_mobile">DDD</string>
    <string name="mobile_number">Numero de celular</string>
    <string name="skincolor">Cor da pele</string>
    <string name="education_error">Escolha uma opçao para Escolaridade</string>
    <string name="skincolor_error">Escolha uma opção para Cor de Pele</string>
    <string name="familyincome_error">Escolha uma opção para Renda familiar</string>
    <string name="familynumber_error">Preencha Numero de pessoas na familia corretamente.</string>
    <string name="maincategory_error">Escolha uma Categoria Principal</string>
    <string name="subcategory_error">Escolha uma sub categoria.</string>
    <string name="financial_control_title">Controle Financieiro</string>
    <string name="product_service_prize_title">Preficicação Produto/Serviço</string>
    <string name="profile_title" >Seu Perfil</string>
    <string name="logout_title">Sair</string>
    <string name="financial_control_add_income_outgo_title">Entrou/Saiu</string>
    <string name="financialcontrol_statement_title">Extrato</string>
    <string name="financialcontrol_charts_title">Estatisticas</string>
    <string name="financialcontrol_report_title">Relatório</string>
    <string name="financontrol_incomeoutgo_income_button">Entrou</string>
    <string name="financontrol_incomeoutgo_outgo_button">Saiu</string>
    <string name="financial_control_category_title">Escolha Categoria</string>
    <string name="financialcontrol_incomeoutgo_form_totalvalue_title">Valor Total</string>
    <string name="financialcontrol_incomeoutgo_form_is_installment_no">À vista</string>
    <string name="financialcontrol_incomeoutgo_form_is_installment_yes">Parcelado</string>
    <string name="financialcontrol_incomeoutgo_form_is_installment_title">Tipo de pagamento</string>
    <string name="button_save">Salvar</string>
    <string name="financialcontrol_incomeoutgo_form_payment_now">Valor da Entrada:</string>
    <string name="financialcontrol_incomeoutgo_form_frequencyinstallment_title">Tipo de parcelamento</string>
    <string name="financialcontrol_incomeoutgo_form_first_payment">Data da Primeira Parcela</string>
    <string name="financialcontrol_incomeoutgo_form_payment_totalinstallments_title">Parcelar em quantas vezes:</string>
    <string name="login_title">JÁ TEM CONTA?</string>
    <string name="activity_login_email_text">E-mail</string>
    <string name="activity_login_password_text">Senha</string>
    <string name="activity_login_button_login">Fazer Login</string>
    <string name="activity_login_signup_button">Criar uma conta</string>
    <string name="activity_register_title">Cadastre-se</string>
    <string name="activity_register_email_text">E-mail</string>
    <string name="ativity_register_password_text">Senha</string>
    <string name="activity_register_password_confirm_text">Repetir senha</string>
    <string name="activity_register_submit_button">Cadastre-se</string>
    <string name="financial_control_payment_date">Data da operação</string>
    <string name="category_error">Deve escolher uma Categoria</string>
    <string name="date_error">Adicione a data da Transação</string>
    <string name="payment_error">Adicione o valor da transação</string>
    <string name="diff_value_payment_error">O valor da entrada não pode ser maior ao valor total da Transação</string>
    <string name="total_installments_error">Escolha o número total de parcelas</string>
    <string name="frequency_error">Escolha quantas vezes será Parcelado</string>
    <string name="firstinstallment_error">Adicione a Data da primeira Parcela</string>
    <string name="saved_successfully">Salvo com sucesso</string>
    <string name="installement_entrance_value_text">Parcela: Valor da Entrada</string>
    <string name="transaction_paid_text">Pago</string>
    <string name="transaction_tending_text">Pendente</string>
    <string name="installement_is_installment_text">Parcela</string>
    <string name="balance_text">Saldo </string>
    <string name="financialcontrol_charts_outgo_title">Gastos</string>
    <string name="financialcontrol_charts_income_title">Receitas</string>
    <string name="logout_dialog_title">Sair da conta</string>
    <string name="logout_dialog_message">Tem certeza que quer sair da sua conta?</string>
    <string name="logout_positive_button">Sair</string>
    <string name="logout_negative_button">Voltar</string>
    <string name="date_firstinstallment_error">A Data da primeira parcela não pode ser anterior à data da transação</string>
    <string name="all_categories">Todas (Geral)</string>
    <string name="income_text">Receita</string>
    <string name="outgo_text">Gastos</string>
    <string name="scheduled_goals">Metas Programadas</string>
    <string name="add_goal_button">Adicionar Meta</string>
    <string name="goals_category_title">Escolha Categoria</string>
    <string name="dialog_goal_form_income_text">tipo de Meta</string>
    <string name="dialog_goal_form_income_option">Receita</string>
    <string name="dialog_goal_form_outgo_option">Gastos</string>
    <string name="dialog_goal_form_value_text">Valor da Meta</string>
    <string name="button_cancel">Voltar</string>
    <string name="no_data">Sem dados</string>
    <string name="report_title_part1">Relatório do periodo</string>
    <string name="report_title_part2">até</string>
    <string name="outgo_report_title">Relatório de Gastos e metas</string>
    <string name="income_report_title">Relatório de Receitas e metas</string>
    <string name="goal_legend_text">Meta Mensal</string>
    <string name="remove_goal_title">Atenção</string>
    <string name="remove_goal_dialog_message">Tem certeza que está querendo deletar essa meta?</string>
    <string name="remove_goal_dialog_positive_button">Deletar</string>
    <string name="remove_goal_dialog_negative_button">Voltar</string>
    <string name="matching_goals_category">Já existe uma Meta para essa categoria neste mes. Por favor, edite a categoria existente.</string>
    <string name="edit_button_text">Editar</string>
    <string name="remove_buttton_text">Deletar</string>
    <string name="installment_number">Parcela</string>
    <string name="remove_transaction_dialog_message">Tem certeza que está querendo deletar essa transação? No caso de ter parcelas, elas também serão deletadas.</string>
    <string name="goal_reached">Meta atingida</string>
    <string name="goal_reached_text_1">Atenção! Você atingiu a meta: </string>
    <string name="goal_reached_text_2_income">em Receita</string>
    <string name="goal_reached_text_2_outgo">em Gastos</string>
    <string name="goal_preview_reached">Informação sobre Meta</string>
    <string name="yes_installment_has_been_paid">Sim</string>
    <string name="no_installment_has_not_been_paid_yet">No, ainda não</string>
    <string name="installment_payment_title">Pagamento de parcela</string>
    <string name="installment_payment_message">A parcela x já foi paga?</string>
    <string name="password_forgotten_text">Esqueceu a senha?</string>
    <string name="continue_with_facebook">Continuar com o Facebook</string>
    <string name="type_your_email">Escreva seu e-mail</string>
    <string name="recover_password">Recuperar senha</string>
    <string name="recover_password_email_sent">Foi enviado um e-mail para resetar a sua senha. Revise seu e-mail</string>
    <string name="register_title">Faça sua conta</string>
    <string name="activity_register_password_text_confirm">Repetir a senha</string>
    <string name="show_statement">Ver extrato</string>
    <string name="current_balance">Saldo Atual</string>
    <string name="income_text_2">Entradas</string>
    <string name="outgo_text_2">Saídas</string>
    <string name="currenry_br">R$</string>
    <string name="currency_text">Saldo</string>
    <string name="show_details">Detalhes</string>
    <string name="accept_button">Ok</string>
    <string name="activity_register_register_button">Cadastrar</string>
    <string name="dialog_resume_service_price_delete_button_text">Deletar</string>
    <string name="dialog_resume_service_price_continue_button_text">Continuar</string>
    <string name="dialog_service_price_fixed_cost_title_text_2">Custos Fixos</string>
    <string name="dialog_service_price_fixed_cost_form_description_text">Descricão</string>
    <string name="dialog_service_price_fixed_cost_form_value_text">Valor</string>
    <string name="dialog_resume_product_price_title">Precificacão de Produto</string>
    <string name="dialog_resume_product_price_message">Existe uma planilha de Precificacão de Produto que não foi concluida. Deseja continuar ou deletar a mesma?</string>
    <string name="dialog_product_price_raw_form_save_button_text">Salvar</string>
    <string name="dialog_product_price_raw_form_cancel_button_text">Voltar</string>
</resources>