<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu1"
            android:icon="@drawable/ic_hand_primary_color"
            android:title="@string/financial_control_title" />
        <item
            android:id="@+id/nav_menu2"
            android:icon="@drawable/ic_tag_primary_color"
            android:title="@string/product_service_prize_title" />
        <item
            android:id="@+id/nav_menu3"
            android:icon="@drawable/ic_avatar_primary_color"
            android:title="@string/profile_title" />
        <item
            android:id="@+id/nav_menu4"
            android:icon="@drawable/ic_logout_primary_color"
            android:iconTint="@color/colorPrimary"
            android:title="@string/logout_title" />

    </group>


</menu>