<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/background_dialog">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/loginTitle"
        android:text="@string/password_forgotten_text"/>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/inputLayout"
        android:hint="@string/type_your_email">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_forgot_email_input"
            style="@style/inputText"
            android:hint="@string/type_your_email"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_forgot_cancel_button"
            android:layout_width="0dp"
            style="@style/button_register"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel"
            android:layout_marginRight="5dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_forgot_accept_button"
            style="@style/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recover_password"/>
    </LinearLayout>
</LinearLayout>