<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    style="@style/background"
    android:orientation="vertical"
    >
    <ImageView
        style="@style/imageLoginTitle"
        app:srcCompat="@drawable/logo_big"/>
    <TextView
        android:id="@+id/activity_register_title"
        android:text="@string/register_title"
        style="@style/loginTitle"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_register_input_email_text"
        style="@style/inputLayout"
        android:hint="@string/activity_login_email_text"
        app:hintTextAppearance="@style/EditTextHintStyle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_register_input_email"
            style="@style/inputText"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_register_input_password_text"
        android:hint="@string/activity_login_password_text"
        style="@style/inputLayout"
        app:hintTextAppearance="@style/EditTextHintStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_register_input_password"
            style="@style/inputText"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_register_input_password_confirm_text"
        android:hint="@string/activity_register_password_text_confirm"
        style="@style/inputLayout"
        app:hintTextAppearance="@style/EditTextHintStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_register_input_password_confirm"
            style="@style/inputText"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/activity_register_input_submit_button"
        style="@style/loginButton"
        android:text="@string/activity_register_register_button"
        />





</LinearLayout>