<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data >
        <variable name="fixedcost" type="ta.na.mao.database.models.serviceprice.FixedCost"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tool_bar_color"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/title_font"
                android:textSize="18dp"
                android:textAlignment="center"
                android:text="@string/dialog_service_price_fixed_cost_title_text_2"
                />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/inputLayoutOutlinedBox"
            android:fontFamily="@font/title_font"
            android:hint="@string/dialog_service_price_fixed_cost_form_description_text"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/EditTextHintStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_service_price_fixed_form_name"
                style="@style/inputText"
                android:fontFamily="@font/title_font"
                android:text="@={fixedcost.description}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/inputLayoutOutlinedBox"
            android:hint="@string/dialog_service_price_fixed_cost_form_value_text"
            android:fontFamily="@font/title_font"
            app:hintTextAppearance="@style/EditTextHintStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_service_price_fixed_cost_form_value"
                style="@style/inputText"
                android:inputType="number"
                android:maxLength="3"
                android:fontFamily="@font/title_font"
                android:text="@={fixedcost.fromDoubletoString(fixedcost.value)}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerInParent="true"
                android:weightSum="2">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/dialog_service_price_fixed_cost_form_cancel_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_product_price_raw_form_cancel_button_text"
                    style="@style/button_dialog_cancel"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/dialog_service_price_fixed_cost_form_save_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/button_dialog_accept"
                    android:text="@string/dialog_product_price_raw_form_save_button_text"
                    android:layout_weight="1"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</layout>